test/src/e2e_vm_tests/test_programs/should_fail/generics_not_supported/src/inner_lib.sw
library inner_lib;

const C = 42;

pub fn func() -> bool {
    true
}

pub struct S2<T> {}